# 2026_muds_hackathon_FastAPI

./: .env.example  20260710_jan_diagnosis-v2_3.md  20260711_jan_detection-confirm-v2_4.md  AGENTS.md  DEPLOY.md  README.md  main.py  pyproject.toml  render.yaml  requirements.txt  ui_integration_spec_for_member_c.md
app/: auth.py  config.py  constants.py  detection.py  display.py  engine.py  parser.py  sources.py  suggestions.py  vision.py
tests/: test_api.py  test_engine.py  test_suggestion_engine.py  test_v23.py  test_v24.py
