[project]
name = "2026-muds-hackthaon-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langsmith>=0.10.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "slowapi>=0.1.10",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
